# rune-lib

./: .gitignore  ALIGNMENT_VERIFIED.md  BALANCED_OOD_VALIDATION_README.md  CANONICAL_ALIGNMENT_GUARANTEE.md  CHECKPOINT_V0.1_FROZEN.md  CONFIDENCE_THRESHOLD_GUIDE.md  DATASET_FIX_SUMMARY.md  DIVERSITY_SAMPLING_V2_ANALYSIS.md  DIVERSITY_V2_QUICKSTART.md  FROZEN_VERSIONS_MANIFEST.md  METHODOLOGY.md  OOD_VALIDATION_BALANCED_QUICK_REFERENCE.md  OOD_VALIDATION_BALANCED_SUMMARY.md  OOD_VALIDATION_FINAL_MODERN_HEAVY.md  OOD_VALIDATION_QUICK_START.md  OOD_VALIDATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PIPELINE.md  PIPELINE_VERIFICATION.md  README.md  RUN_DIVERSITY_PIPELINE.md  START_TRAINING.sh  TRAINING_DATASETS_SUMMARY.md  TRAINING_SUMMARY.md  VERSION_COMPARISON.md  add_extended_entities_to_ood.py  analyze_detection_quality.py  augment_mlm_context.py  create_diverse_subset_v2.py  create_diverse_subset_with_splitting.py  diversify_by_name_frequency.py  eval_mlm_augmentation.py  evaluate_checkpoints_on_ground_truth.py  evaluate_with_partial_match.py  ood_validation_ground_truth_extended.jsonl  ood_validation_ground_truth_modern_heavy.jsonl  prefilter_by_length_8k.py  process_all_datasets.py  pyproject.toml  reshape_synthetic_data.py  (+3 more)
archived/ood_validation/: ood_validation_ground_truth_modern_heavy.jsonl.backup
experiments/: PREPARE_CURRICULUM_DATA.sh  START_CURRICULUM_TRAINING.sh  diversify_ner_data.py  migrate_to_entities_format.py  prefilter_by_length.py  preprocess_raw_stories.py  process_titles_dataset.py  split_stories_into_scenes.py  sweep_thresholds.py  train_curriculum.py
rune/: __init__.py
rune/augment/: __init__.py  augment_utils.py  name_inventory.py
rune/core/: __init__.py  (+4 more)
tests/: __init__.py  test_classic_literature.py  test_coreference.py  test_dataset_integrity.py  test_entity_extraction.py  test_improved_tokenizer.py  test_label_alignment.py  test_name_augmentation.py  test_normalization.py  test_schema.py  test_story_preprocessor.py  test_tokenization_fix.py  test_utils.py
(+15 files in other folders)
