[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rune-lib"
version = "0.1.0"
description = "Really Uncomplicated Named Entity Library - Modern, minimalistic bio-tagging with BERT and transformers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mitchell Currie", email = "mitchcurrie@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.12.0",
    "seqeval>=1.2.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "accelerate>=0.20.0",  # For efficient training
]

[project.optional-dependencies]
longformer = [
    "transformers[torch]>=4.30.0",
    "accelerate>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.0.270",
    "mypy>=1.4",
]

[project.urls]
Homepage = "https://github.com/mitchellcurrie/rune-lib"
Repository = "https://github.com/mitchellcurrie/rune-lib"
Issues = "https://github.com/mitchellcurrie/rune-lib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rune*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true